--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,11 @@ services:
       POSTGRES_USER: steam
       POSTGRES_PASSWORD: steam
     ports:
-      - "5432:5432"
+      - "15432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U steam"]
+      test: ["CMD-SHELL", "pg_isready -U steam -d postgres"]
       interval: 10s
       timeout: 5s
       retries: 10
