--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,16 @@ x-minio-env: &minio-env
   FILE_STORAGE_REGION: us-east-1
 
 services:
+  mongo:
+    image: mongo:6
+    container_name: steam-mongo
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+    networks:
+      - steam-net
+
   postgres:
     image: postgres:15
     container_name: steam-postgres
@@ -145,6 +155,7 @@ services:
       <<: *minio-env
       ONLINE_DATABASE_URL: postgresql://steam:steam@postgres:5432/online_service
       ALLOWED_ORIGINS: http://localhost:3000,http://localhost:13000
+      REDIS_URL: redis://redis:6379/0
     depends_on:
       postgres:
         condition: service_healthy
@@ -228,6 +239,25 @@ services:
     networks:
       - steam-net
 
+  friends-chat-service:
+    build:
+      context: ./services/friends-chat-service
+    environment:
+      PROJECT_NAME: Friends & Chat
+      SECRET_KEY: dev-secret
+      JWT_ALGORITHM: HS256
+      ALLOWED_ORIGINS: http://localhost:3000,http://localhost:13000
+      MONGO_URL: mongodb://mongo:27017
+      MONGO_DB: friends_chat
+      FRIENDS_CHAT_SERVICE_PORT: 8013
+    depends_on:
+      mongo:
+        condition: service_started
+    ports:
+      - "13013:8013"
+    networks:
+      - steam-net
+
   api-gateway:
     build:
       context: ./services/api-gateway
@@ -244,6 +274,7 @@ services:
       NOTIFICATION_SERVICE_URL: http://notification-service:8009
       RECOMMENDATION_SERVICE_URL: http://recommendation-service:8010
       ACHIEVEMENT_SERVICE_URL: http://achievement-service:8011
+      FRIENDS_CHAT_SERVICE_URL: http://friends-chat-service:8013
       REDIS_URL: redis://redis:6379/0
       ALLOWED_ORIGINS: http://localhost:3000
     depends_on:
@@ -281,6 +312,7 @@ services:
 volumes:
   postgres-data:
   minio-data:
+  mongo-data:
 
 networks:
   steam-net:
